# termux-tools

./: configure.ac  termux.properties
doc/: termux.1.md.in
mirrors/: Makefile.am  default
motds/: Makefile.am
scripts/: pkg.in  termux-change-repo.in  termux-open.in  termux-reload-settings.in  termux-reset.in  termux-setup-storage.in  termux-wake-lock.in  termux-wake-unlock.in
